# x0x

./: .adr-kit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  Cargo.toml  FRICTION_REPORT.md  FRICTION_REPORT_ADDENDUM.md  NETWORK_TEST_REPORT.txt  NEXT-SESSION-PROMPT.md  README.md  RESOURCE-BOUNDS-REVIEW-2026.md  SKILL.md  TEST_SUITE_GUIDE.md  WASM_ROADMAP.md  audit.jsonl  autoresearch.jsonl  autoresearch.sh  coverage-thresholds.toml  index.d.ts  index.js  justfile  lcov.info  package-lock.json  package.json
.cargo/: audit.toml
.claude/: review_prompt.md  task_prompt.md
.config/: nextest.toml
.deployment/: README.md  bootstrap-helsinki.toml  bootstrap-nuremberg.toml  bootstrap-nyc.toml  bootstrap-sfo.toml  bootstrap-singapore.toml  bootstrap-tokyo.toml  cleanup.sh  deploy-443.sh  deploy.sh  health-check.sh  install.sh  logs.sh  x0x-bootstrap.service  x0xd.service
.github/: pull_request_template.md  release-metadata-policy.json
.pi/: worktree.json
.planning/: ARCHITECTURAL-DECISION.md  ARCHITECTURE_DECISION.md  CURRENT-STATUS.md  MILESTONE-3-BLOCKED-SUMMARY.md  MILESTONE_2_COMPLETE.md  PHASE-1.2-PROGRESS.md  PHASE-1.5-COMPLETE.md  PHASE-1.6-COMPLETE.md  PHASE_1.6_STATUS.md  PLAN-phase-1.1.md  PLAN-phase-1.2-sota-presence.md  PLAN-phase-1.2.md  PLAN-phase-1.3-sota-presence.md  PLAN-phase-1.3.md  PLAN-phase-1.4.md  PLAN-phase-1.5-sota-presence-tests.md  PLAN-phase-1.5.md  PLAN-phase-1.6-gossip-integration-REVISED.md  PLAN-phase-1.6-gossip-integration.md  PLAN-phase-2.1.md  PLAN-phase-2.2.md  PLAN-phase-2.3.md  PLAN-phase-2.4.md  PLAN-phase-3.1.md  PLAN-phase-3.2.md  PROJECT-COMPLETE.md  README.md  ROADMAP.md  SESSION-SUMMARY-2026-02-06.md  STATE.json  STATE.json.backup  TASK-9-COMPLETION-SUMMARY.md  c2-proof-hardening.md  checkpoint-phase-3.1.md  checkpoint.json  named-groups-blueprint.md  named-groups-e2e-sections.sh  phase-3.1-completion.md  phase-3.1-network-binding-issue.md  phase-3.2-progress.md  (+3 more)
.well-known/: agent.json
benches/: gossip_dispatch_throughput.rs
bindings/nodejs/: .gitignore  .npmignore  Cargo.toml  README.md  index.d.ts  index.js  package.json  tsconfig.json
bindings/nodejs/.cargo/: config.toml
bindings/nodejs/__test__/: events.spec.ts  integration.spec.ts  multi-agent.spec.ts  task-sync.spec.ts
bindings/nodejs/examples/: basic-agent.js  multi-agent.ts  pubsub.js  task-list.js
bindings/nodejs/npm/darwin-arm64/: package.json
bindings/nodejs/npm/darwin-x64/: package.json
bindings/nodejs/npm/linux-arm64-gnu/: package.json
bindings/nodejs/npm/linux-x64-gnu/: package.json
bindings/nodejs/npm/linux-x64-musl/: package.json
bindings/nodejs/npm/wasm32-wasi/: package.json
bindings/nodejs/npm/win32-x64-msvc/: package.json
bindings/nodejs/src/: agent.rs  config.rs  events.rs  events.rs.backup  events.rs.bak  events.rs.bak2  identity.rs  lib.rs  task_list.rs
bindings/python/: .gitignore  API.md  Cargo.toml  README.md  generate_stubs.py  pyproject.toml
bindings/python/examples/: basic_agent.py  event_callbacks.py  pubsub_messaging.py  task_collaboration.py
bindings/python/src/: agent.rs  config.rs  events.rs  health.rs  identity.rs  lib.rs  pubsub.rs  runtime_controls.rs  task_list.rs
bindings/python/tests/: conftest.py  test_agent_builder.py  test_events.py  test_identity.py  test_integration.py  test_network.py  test_pubsub.py  test_stubs.py  test_task_list.py
bindings/python/x0x/: __init__.pyi  agent.pyi  identity.pyi  pubsub.pyi  task_list.pyi
docs/: AGENT_CARD.md  GPG_SIGNING.md  IDENTITY-DEEP-DIVE.md  SKILLS.md  VERIFICATION.md  api-reference.md  api.md  architecture-gossip-nat.md  audit-wp-g-sender-auth.md  cicd.md  compared.md  conceptual-guide-for-humans.md  connect-acl.md  coverage-exclusions.md  decisions.md  diagnostics.md  ecosystem.md  exec.md  identity-architecture.md  install.md  local-apps.md  next-session-communitas-parity.md  overview.md  parity-matrix.md  patterns.md  persistence.md  sdk-quickstart.md  security.md  symphony-integration.md  troubleshooting.md  trust-and-connectivity.md  uninstall.md  upgrade-system.md  verify.md  vision.md
examples/: demo-private-groups.sh  private_group_demo.rs  voice_call.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_announcement_deser.rs  fuzz_config_toml.rs  fuzz_dm_envelope.rs  fuzz_exec_frame.rs  fuzz_file_offer.rs  fuzz_invite_link.rs
handoff/: 0212-welcome-fetch-retry-SECOND-OPINION-2026-06-05.md  cooling-vs-welcome-fetch-2026-06-04.md  treekem-2nd-member-welcome-gap-2026-06-03.md  treekem-convergence-CLOSED-2026-06-05.md  treekem-convergence-SECOND-OPINION-2026-06-04.md  treekem-direct-membership-delivery-result.md  treekem-member-welcome-delivery-rootcause-2026-06-04.md  treekem-multimember-investigation.md  treekem-pending-replay-catchup-result.md
issues/: issues.jsonl
proofs/: PROOF_SUMMARY.md  fleet-redeploy-v0.19.5.sh  fleet-soak-v0.19.5-monitor.sh
python/: README.md  pyproject.toml
python/x0x/: __init__.py  agent.py
scripts/: adr-governance.py  build-linux.sh  bump-version.sh  check-coverage-thresholds.py  check-panics.sh  dhat_analyze.py  gpg-sign-release.sh  install.ps1  install.py  install.sh  local-spin-debug.sh  release-dryrun.sh  sign-skill.sh  verify-skill.sh  wipe-x0x-local.sh
src/: bootstrap.rs  config.rs  connectivity.rs  constitution.rs  contacts.rs  direct.rs  dm.rs  dm_capability.rs  dm_capability_service.rs  dm_inbox.rs  dm_send.rs  error.rs  forward.rs  gossip.rs  groups.rs  hedge.rs  identity.rs  identity.rs.bak  lib.rs  lib.rs.bak  logging.rs  mdns.rs  network.rs  network.rs.bak  peer_relay.rs  presence.rs  revocation.rs  storage.rs  storage.rs.bak  storage.rs.bak2  storage.rs.orig  streams.rs  trust.rs  types.rs
tests/: CLAUDE.md  COMPREHENSIVE_TEST_PROMPT.md  NETWORK_TARGETING.md  a2a_binding_integration.rs  announcement_test.rs  ant_quic_0272_surface.rs  api-coverage.sh  api_coverage.rs  api_manifest.rs  bootstrap_cache_integration.rs  (+159 more)
tests/harness/: Cargo.toml
tests/harness/src/: cluster.rs  coverage.rs  daemon.rs  lib.rs  models.rs  strategies.rs
tests/harness/src/scenarios/: mod.rs
(+1346 files in other folders)
