[package]
name = "x0x"
version = "0.3.1"
edition = "2021"
rust-version = "1.75.0"
license = "MIT OR Apache-2.0"
description = "Agent-to-agent gossip network for AI systems — no winners, no losers, just cooperation"
repository = "https://github.com/saorsa-labs/x0x"
homepage = "https://saorsalabs.com"
documentation = "https://docs.rs/x0x"
readme = "README.md"
keywords = ["gossip", "ai-agents", "p2p", "decentralised", "post-quantum"]
categories = ["network-programming", "asynchronous"]
authors = ["David Irvine <david@saorsalabs.com>"]

[dependencies]
anyhow = "1.0"
ant-quic = "0.21"
async-trait = "0.1"
bincode = "1.3"
blake3 = "1.5"
bytes = "1.11"
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
hex = "0.4"
axum = "0.7"
base64 = "0.22"
axum-extra = { version = "0.9", features = ["typed-header"] }
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
rand = "0.8"
saorsa-gossip-coordinator = { git = "https://github.com/jacderida/saorsa-gossip.git", branch = "fix-do_not_abort_eager_forwarding" }
saorsa-gossip-crdt-sync = { git = "https://github.com/jacderida/saorsa-gossip.git", branch = "fix-do_not_abort_eager_forwarding" }
saorsa-gossip-groups = { git = "https://github.com/jacderida/saorsa-gossip.git", branch = "fix-do_not_abort_eager_forwarding" }
saorsa-gossip-identity = { git = "https://github.com/jacderida/saorsa-gossip.git", branch = "fix-do_not_abort_eager_forwarding" }
saorsa-gossip-membership = { git = "https://github.com/jacderida/saorsa-gossip.git", branch = "fix-do_not_abort_eager_forwarding" }
saorsa-gossip-presence = { git = "https://github.com/jacderida/saorsa-gossip.git", branch = "fix-do_not_abort_eager_forwarding" }
saorsa-gossip-pubsub = { git = "https://github.com/jacderida/saorsa-gossip.git", branch = "fix-do_not_abort_eager_forwarding" }
saorsa-gossip-rendezvous = { git = "https://github.com/jacderida/saorsa-gossip.git", branch = "fix-do_not_abort_eager_forwarding" }
saorsa-gossip-runtime = { git = "https://github.com/jacderida/saorsa-gossip.git", branch = "fix-do_not_abort_eager_forwarding" }
saorsa-gossip-transport = { git = "https://github.com/jacderida/saorsa-gossip.git", branch = "fix-do_not_abort_eager_forwarding" }
saorsa-gossip-types = { git = "https://github.com/jacderida/saorsa-gossip.git", branch = "fix-do_not_abort_eager_forwarding" }
saorsa-pqc = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
semver = "1.0"
sha2 = "0.10"
flate2 = "1.0"
tar = "0.4"
zip = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
zeroize = "1.8.2"
futures = "0.3"

[dev-dependencies]
criterion = "0.5"
futures = "0.3"
proptest = "1.4"
serde_json = "1.0"
tempfile = "3.14"

[[bin]]
name = "x0x-bootstrap"
path = "src/bin/x0x-bootstrap.rs"

[[bin]]
name = "x0xd"
path = "src/bin/x0xd.rs"

[[bin]]
name = "x0x-keygen"
path = "src/bin/x0x-keygen.rs"

[workspace]
members = [
    ".",
    "bindings/nodejs",
    "bindings/python",
]
