[package]
name = "x0x-python"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later OR Commercial"
description = "Python bindings for x0x - Secure P2P communication for AI agents"
repository = "https://github.com/saorsa-labs/x0x"

[lib]
name = "x0x"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
x0x = { path = "../.." }
hex = "0.4"

[build-dependencies]
pyo3-build-config = "0.20"
