[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "agent-x0x"
version = "0.1.0"
description = "Secure P2P communication for AI agents with CRDT collaboration"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "AGPL-3.0-or-later OR Commercial" }
keywords = ["agent", "p2p", "cryptography", "crdt", "collaboration", "quantum-safe"]
authors = [
    { name = "Saorsa Labs", email = "david@saorsalabs.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Networking",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

[project.urls]
Homepage = "https://github.com/saorsa-labs/x0x"
Repository = "https://github.com/saorsa-labs/x0x"
Issues = "https://github.com/saorsa-labs/x0x/issues"

[tool.maturin]
module-name = "x0x"
binding = "pyo3"
features = ["pyo3/extension-module"]
