[package]
name = "x0x-test-harness"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
x0x = { path = "../.." }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.14"
dirs = "5.0"
rand = "0.8"
proptest = "1.4"
tokio-tungstenite = "0.24"
futures = { version = "0.3", features = ["alloc"] }
